# tvs_node

./: .env.example  .gitignore  ADMIN_FRONTEND_INTEGRATION.md  Cargo.toml  Dockerfile.local  INTEGRATION_SUMMARY.md  QUICK_START.md  README.md  TVS_ROUTES_ARCHITECTURE.md  TVS_SERVER_INTEGRATION.md  config.example.json  docker-compose.local.yml  rebuild_and_run.sh  run_tvs_docker_node.sh
configs/: node1.json  node2.json  node3.json
src/: config.rs  main.rs  server_builder.rs
